feat: adds .env.local.example

--- a/client/.env.local.example
+++ b/client/.env.local.example
@@ -4,14 +4,19 @@
 ###############################
 
 AUTH_A12N_URL=http://localhost:8531 # auth server url
+AUTH_A12N_ISSUER=http://localhost:8531 # auth server url
 AUTH_A12N_ID=      # Client id 
 AUTH_A12N_SECRET=  # Client secret. 
                    # Run npx auth secret / pnpm exec auth secret
 AUTH_SECRET=       # MUST BE SET or you will get a MissingSecret error https://authjs.dev/reference/core/errors#missingsecret 
 
-# AUTH_TRUST_HOST_=1 # PROD only: for deploying your application behind a reverse proxy
-
 ###############################
 ## Nextjs variables
 ###############################
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
 
+###############################
+## Deployment only
+###############################
+AUTH_TRUST_HOST_=1 # PROD only: for deploying your application behind a reverse proxy
