chore: comment out .env.local.example to avoid namespace conflicts with .env

--- a/client/.env.local.example
+++ b/client/.env.local.example
@@ -1,22 +1,22 @@
-###############################
+#######################################################
 ## a12n-server variables that integrate with next-auth
 ## See @link {https://authjs.dev/reference/nextjs}
-###############################
+#######################################################
 
-AUTH_A12N_URL=http://localhost:8531 # auth server url
-AUTH_A12N_ISSUER=http://localhost:8531 # auth server url
-AUTH_A12N_ID=      # Client id 
-AUTH_A12N_SECRET=  # Client secret. 
-                   # Run npx auth secret / pnpm exec auth secret
-AUTH_SECRET=       # MUST BE SET or you will get a MissingSecret error https://authjs.dev/reference/core/errors#missingsecret 
+# AUTH_A12N_ISSUER=http://localhost:8531 # auth server url
+# AUTH_A12N_ID=      # Client id from a12n-server Oauth2 app configuration
+# AUTH_A12N_SECRET=  # Client secret from a12n-server app registration
+                
+# AUTH_SECRET=       # MUST BE SET or you will get a [MissingSecret error](https://authjs.dev/reference/core/errors#missingsecret) 
+                     # Run npx auth secret / pnpm exec auth secret to generate
 
-###############################
+################################
 ## Nextjs variables
-###############################
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_URL_INTERNAL=http://localhost:3000
+################################
+# NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_URL_INTERNAL=http://localhost:3000
 
-###############################
+################################
 ## Deployment only
-###############################
-AUTH_TRUST_HOST_=1 # PROD only: for deploying your application behind a reverse proxy
+################################
+# AUTH_TRUST_HOST_=1 # PROD only: for deploying your application behind a reverse proxy
